--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
   "homepage": "https://github.com/smockoro/eslint-config#readme",
   "devDependencies": {
     "editorconfig-checker": "^5.0.1",
-    "license-checker": "^25.0.1"
+    "license-checker": "^8.0.1"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4"
-  }
+  },
+  "workspaces": [
+    "examples/plain"
+  ]
 }
