--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/smockoro/eslint-config#readme",
   "devDependencies": {
+    "@release-it/conventional-changelog": "^5.1.0",
     "editorconfig-checker": "^5.0.1",
-    "license-checker": "^8.0.1"
+    "license-checker": "^8.0.1",
+    "release-it": "^15.11.0"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.51.0",
