--- a/.github/workflows/build.test.yaml
+++ b/.github/workflows/build.test.yaml
@@ -9,6 +9,10 @@ jobs:
         with:
           fetch-depth: 0
       - uses: actions/setup-node@v3
+      - name: install deps
+        run: |
+          cd examples/plain
+          npm install
       - name: build examples/plain
         run: npm run build -w examples/plain
       - name: lint examples/plain
