--- a/.github/workflows/build.test.yaml
+++ b/.github/workflows/build.test.yaml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/setup-node@v3
       - name: install deps
         run: |
+          npm install
           cd examples/plain
           npm install
       - name: build examples/plain
